--- a/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Empleado/Edit.cshtml
@@ -35,7 +35,7 @@
     @using (Html.BeginForm("EditRegister", "Empleado", FormMethod.Post, new { model = cuentaM }))
     {
         @Html.AntiForgeryToken()
-        <div class="col-md-8 col-md-offset-2 contenedor">
+        <div class="col-md-8 col-md-offset-2">
         <br>
             <div class="form-horizontal">
                 @Html.ValidationSummary(true)
