--- a/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Edit.cshtml
@@ -21,7 +21,7 @@
 </style>
 
 <div class="container-fluid">
-    <div class="col-md-3">
+    <div class="col-md-5">
         <ol class="breadcrumb">
             <li class="active"><a href="@Url.Action("Index","Regalo")"> Mantenimiento de regalos</a></li>
             <li>Editar Regalo</li>
@@ -34,7 +34,7 @@
     {
         @Html.AntiForgeryToken()
         
-    <div class="col-md-8 col-md-offset-2 contenedor">
+    <div class="col-md-8 col-md-offset-2">
         <br>
         <div class="form-horizontal">
             @Html.ValidationSummary(true)
