--- a/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/Regalo/Index.cshtml
@@ -8,19 +8,8 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 <style>
-    tbody {
-        cursor: pointer;
-    }
-
-    .trselected {
-        background: #F1F1F1;
-        font-weight: bold;
-    }
-
-    thead {
-        background-color: #337AB7;
-        color: white;
-        font-weight: bold;
+    td {
+        text-align: center;
     }
 </style>
 
