--- a/WebApplication4/WebApplication4/Views/Ventas/VenderEntrada.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/VenderEntrada.cshtml
@@ -30,7 +30,7 @@
             <li><a href="@Url.Action("Index2", "Home")">Inicio</a></li>
             <li class="active">Pagar Entrada</li>
         </ol>
-    </div>
+    @Html.HiddenFor(c => c.modalidad)
 </div>
 
 @{
@@ -122,6 +122,7 @@
         </div>
         @using (Html.BeginForm("VenderEntrada", "Ventas", FormMethod.Post, new { @id = "formPost" }))
         {
+            @Html.HiddenFor(c => c.modalidad)
             <div class="cold-md-12">
                 <div class="row form-group">
                     @Html.LabelFor(c => c.Nombre, new { @class = "control-label col-md-2" })
@@ -203,9 +204,16 @@
                 <h3>Método de Pago</h3><br />
                 <div class="row">
                     <div id="efectivo" class="col-md-4">
-                        <div>                            
+                        <div>
                             <label>Efectivo:</label>
-                            <input type="radio" name="TipoPago" value="1" onclick="cambioPago()" checked="checked">
+                            @if (Model.modalidad == 1)
+                            {
+                                <input type="radio" name="TipoPago" value="1" onclick="cambioPago()" checked="checked">
+                            }
+                            else
+                            {
+                                <input type="radio" name="TipoPago" value="1" onclick="cambioPago()">
+                            }
                         </div><br />
                         <div class="row form-group">
                             @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
@@ -244,10 +252,17 @@
                             </div>
                         </div>
                     </div>
-                    <div id="tarjeta" class="col-md-4">                        
+                    <div id="tarjeta" class="col-md-4">
                         <div>
                             <label>Tarjeta:</label>
-                            <input type="radio" name="TipoPago" value="2" onclick="cambioPago()">
+                            @if (Model.modalidad == 2)
+                            {
+                                <input type="radio" name="TipoPago" value="2" onclick="cambioPago()" checked="checked">
+                            }
+                            else
+                            {
+                                <input type="radio" name="TipoPago" value="2" onclick="cambioPago()">
+                            }
                         </div><br />
                         <div class="row form-group">
                             @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
@@ -289,7 +304,14 @@
                     <div id="mixto" class="col-md-4">
                         <div>
                             <label>Mixto:</label>
-                            <input type="radio" name="TipoPago" value="3" onclick="cambioPago()">
+                            @if (Model.modalidad == 3)
+                            {
+                                <input type="radio" name="TipoPago" value="3" onclick="cambioPago()" checked="checked">
+                            }
+                            else
+                            {
+                                <input type="radio" name="TipoPago" value="3" onclick="cambioPago()">
+                            }
                         </div><br />
                         <div class="row form-group">
                             @Html.LabelFor(c => c.Descuento, new { @class = "control-label col-md-3" })
@@ -329,6 +351,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="row">
                     <div class="col-md-6 col-sm-6 col-xs-6">
                         <input type="submit" value="Finalizar Venta" onclick="return llenaArreglo()" class="btn btn-default btn-primary" />
