--- a/WebApplication4/WebApplication4/Views/Ventas/BuscaReserva.cshtml
+++ b/WebApplication4/WebApplication4/Views/Ventas/BuscaReserva.cshtml
@@ -52,7 +52,7 @@
         @*@if (tu != null && tu.estadoCaja == "Abierto") 
         {*@ 
             <div class="col-md-3 ">
-                <a onclick="redirigeReserva()" class="btn btn-primary pull-right">Pagar reserva <span class="glyphicon glyphicon-usd"></span></a>
+                <a onclick="redirigeReserva()" class="btn btn-primary pull-right"><span class="fa fa-money fa-lg"></span> Pagar reserva</a>
             </div>
         @*}*@
         <div class="col-md-2">
@@ -62,18 +62,17 @@
 
 
     <div class="row">
-        <h4>Resultados:</h4><br>
-        <div class="row">
+        <h4>Resultados:</h4>
+        <div class="table-responsive">
             <table id="mytable" class="table table-bordered table-hover">
                 <thead>
-                    <tr class="thead">
-                        <th>Código Reserva</th>
-                        <th>Nombre</th>
-                        <th>N° Doc</th>
-                        <th>Evento</th>
-                        <th>Cantidad Entradas</th>
-                        <th>Monto Total</th>
-
+                    <tr>
+                        <th class="col-md-2">Código Reserva</th>
+                        <th class="col-md-3">Nombre</th>
+                        <th class="col-md-1">N° Doc</th>
+                        <th class="col-md-3">Evento</th>
+                        <th class="col-md-2">Cantidad Entradas</th>
+                        <th class="col-md-1">Total (S/.)</th>
                     </tr>
                 </thead>
                 <tbody id="tbody">
@@ -93,7 +92,6 @@
                                 <td>@db.Eventos.Find(fu.codEvento).nombre</td>
                                 <td>@row.cantEntradas</td>
                                 <td>@ve.MontoTotalSoles</td>
-
                             </tr>
                         }
                     }
