pago reserva caja abierta

--- a/WebApplication4/WebApplication4/Views/PuntoVenta/Index.cshtml
+++ b/WebApplication4/WebApplication4/Views/PuntoVenta/Index.cshtml
@@ -147,7 +147,7 @@
                     success: function (data) {
                         alert(data);
                         $('#eliminar').modal('hide');
-                        row.remove();
+                        //row.remove();
                         window.location.href = '/PuntoVenta/Index';
                     },
                     error: function (data) {
