--- a/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
+++ b/WebApplication4/WebApplication4/Views/Evento/DatosGenerales.cshtml
@@ -6,7 +6,9 @@
 }
 @model DatosGeneralesModel
 <style>
-    td{text-align:center}
+    td {
+        text-align: center;
+    }
 </style>
 <div class="container-fluid">
     <div class="col-md-5">
@@ -17,7 +19,7 @@
     </div>
 </div>
 <div class="container">
-    
+
     <div class="row">
         <div class="col-md-12">
             <!--a href="@Url.Action("Index","Evento")" class="btn btn-danger pull-left"><span class="glyphicon glyphicon-hand-left"></span> Regresar</a-->
@@ -29,7 +31,7 @@
         {
             @Html.AntiForgeryToken()
             <div class="col-md-12" id="generales">
-                @Html.ValidationSummary(true)                
+                @Html.ValidationSummary(true)
                 <div class="form-horizontal">
                     <div class="form-group">
                         <div class="col-md-6">
@@ -53,9 +55,9 @@
                                     @Html.ValidationMessageFor(model => model.idOrganizador)
                                 </div>
                             </div>
-                        </div>                        
+                        </div>
                     </div>
-                    
+
                     <div class="form-group">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -75,7 +77,7 @@
                             </div>
                         </div>
                     </div>
-                    
+
                     <div class="form-group">
                         <div class="col-md-6">
                             <div class="form-group">
@@ -94,7 +96,7 @@
                             <div class="form-group">
                                 @Html.LabelFor(c => c.Direccion, new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
-                                    @Html.TextBoxFor(c => c.Direccion, new { @class = "form-control", @placeholder = "Solo si no existe local para el evento" })
+                                    @Html.TextBoxFor(c => c.Direccion, new { @class = "form-control", @placeholder = "Solo si no existe local para el evento", @onchange = "cambio()" })
                                 </div>
                                 @Html.ValidationMessageFor(c => c.Direccion)
                             </div>
@@ -103,10 +105,11 @@
                     <div class="form-group">
                         <div class="col-md-6">
                             <div class="form-group">
-                                @Html.LabelFor(model => model.idRegion, new { @class = "control-label col-md-2" })                                
+                                @Html.LabelFor(model => model.idRegion, new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
                                     @Html.DropDownListFor(model => model.idRegion, @ViewBag.DepID as SelectList, "Departamento", new { @class = "form-control", @onchange = "cambioDepartamento()" })
                                     @Html.ValidationMessageFor(c => c.idRegion)
+                                    @Html.HiddenFor(model => model.idRegion)
                                 </div>
                             </div>
                         </div>
@@ -115,9 +118,10 @@
                                 @Html.LabelFor(model => model.idProv, new { @class = "control-label col-md-2" })
                                 <div class="col-md-10">
                                     @Html.DropDownListFor(model => model.idProv, @ViewBag.ProvID as SelectList, "Provincia", new { @class = "form-control" })
+                                    @Html.HiddenFor(model => model.idProv)
                                 </div>
                             </div>
-                        </div>                            
+                        </div>
                     </div>
 
                     <div class="form-group">
@@ -132,28 +136,30 @@
             <div class="col-md-12">
                 <button type="submit" class="btn btn-primary pull-right">Guardar y seguir <span class="glyphicon glyphicon-hand-right"></span></button>
             </div>
-            
+
         }
-    </div>    
+    </div>
 </div>
 
 <!--ventana de buscar local-->
 <div class="modal fade" id="modalBuscarLocal">
     <div class="modal-dialog">
-        <div class="modal-content">            
+        <div class="modal-content">
             <!--contenido de la ventana-->
-            <div class="modal-body">                
+            <div class="modal-body">
                 <div class="form-group">
                     @{
                         List<Local> localList = db.Local.ToList();
-                    }                    
+                    }
                     <table class="table table-bordered table-hover" id="tablita">
                         <thead>
                             <tr class="thead">
                                 <th>Código</th>
                                 <th>Nombre</th>
+                                <th>Departamento</th>
+                                <th>Provincia</th>
                                 <th>Ubicación</th>
-                                <th>Seleccionar</th> 
+                                <th>Seleccionar</th>
                             </tr>
                         </thead>
                         <tbody>
@@ -162,18 +168,22 @@
                                 <tr>
                                     <td>@local.codLocal</td>
                                     <td>@local.descripcion</td>
+                                    <td>@db.Region.Find(local.idRegion).nombre</td>
+                                    <td>@db.Region.Find(local.idProvincia).nombre</td>
                                     <td>@local.ubicacion</td>
-                                    <td><input type="radio" id="@local.codLocal" name="groupL" value="@local.ubicacion"></td>
+                                    <td>
+                                        <input data-prov="@local.idProvincia" data-dep="@local.idRegion" data-nprov="@db.Region.Find(local.idProvincia).nombre" type="radio" id="@local.codLocal" name="groupL" value="@local.ubicacion">
+                                    </td>
                                 </tr>
                             }
                         </tbody>
                     </table>
                 </div>
-                
+
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>                
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 <button type="button" class="btn btn-primary" onclick="llenaLocal()">Seleccionar</button>
             </div>
         </div>
@@ -183,7 +193,7 @@
 <!--ventana de buscar organizador-->
 <div class="modal fade" id="modalBuscarOrganizador">
     <div class="modal-dialog">
-        <div class="modal-content">            
+        <div class="modal-content">
             <!--contenido de la ventana-->
             <div class="modal-body">
                 <div class="form-group">
@@ -213,7 +223,7 @@
             </div>
             <!--footer de la ventana-->
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>                
+                <button type="button" class="btn btn-default" data-dismiss="modal">Cerrar</button>
                 <button type="button" class="btn btn-primary" onclick="llenaOrg()">Seleccionar</button>
             </div>
         </div>
