--- a/WebApplication4/WebApplication4/Views/Home/Index2.cshtml
+++ b/WebApplication4/WebApplication4/Views/Home/Index2.cshtml
@@ -1,4 +1,4 @@
-﻿@{
+﻿f@{
     ViewBag.Title = "Index2";
     Layout = "~/Views/Shared/_Layout.cshtml";
     string mensaje = null;
@@ -9,7 +9,7 @@
 <section class="jumbotron" style="height:100%">
     <div class="container">
         @if (mensaje != null)
-        { <p>@mensaje</p>}
+        { <strong style="text-decoration:underline">@mensaje</strong>}
         <h1>TICKNET</h1>
         <p>¡El mejor lugar para vender tus entradas!</p>
     </div>
